[package]
name = "lase"
version = "0.2.0"
authors = [ "Jeremy Day <jadaytime@gmail.com>" ]
edition = "2018"

[dependencies]
# TODO: reenable dependency on released amethyst version when d5174a856483f8c0efe720b47e636199578690bd lands.
# amethyst = "0.12.0"
amethyst = { git = "https://github.com/amethyst/amethyst", rev = "d5174a856483f8c0efe720b47e636199578690bd" }
rand = "0.7"
serde = "1.0"

[features]
empty = ["amethyst/empty"]
metal = ["amethyst/metal"]
vulkan = ["amethyst/vulkan"]
